--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
-  "name": "clicky-game",
+  "name": "react-click",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://spacetab.github.io/react-click/",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-scripts": "2.0.5"
@@ -10,6 +12,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
